[package]
name = "jwc-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["blocking"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rayon = "1.11.0"
clap = { version = "4.5.60", features = ["derive"] }